website/versioned_docs/version-1.9.1/BuiltInArchitectures.md
---
title:  Built-in Architectures
---

 	
----

**This file is automatically generated from java files. Do Not Edit It.**

----


## INTRODUCTION

----

## Table of Contents
[fsm](#fsm), [parallel_bdi](#parallel_bdi), [probabilistic_tasks](#probabilistic_tasks), [reflex](#reflex), [rules](#rules), [simple_bdi](#simple_bdi), [sorted_tasks](#sorted_tasks), [user_first](#user_first), [user_last](#user_last), [user_only](#user_only), [weighted_tasks](#weighted_tasks), 

----




## fsm
 

### Variables

	   
* **`state`** (string): Returns the name of the current state of the agent   
* **`states`** (list): Returns the list of all the states defined in the species 
 	
### Actions 
	

----




## parallel_bdi
compute the bdi architecture in parallel. This skill inherit all actions and variables from SimpleBdiArchitecture 

### Variables

	 
 	
### Actions 
	

----




## probabilistic_tasks
A control architecture, based on the concept of tasks, which are executed with a probability depending on their weight. This skill extends WeightedTasksArchitecture skills and have all his actions and variables 

### Variables

	 
 	
### Actions 
	

----




## reflex
Represents the default behavioral architecture attached to species of agents if none is specified. This skills extends AbstractArchitecture and have all his actions and variables 

### Variables

	 
 	
### Actions 
	

----




## rules
A control architecture based on the concept of rules 

### Variables

	 
 	
### Actions 
	

----




## simple_bdi
this architecture enables to define a behaviour using BDI. It is an implementation of the BEN architecture (Behaviour with Emotions and Norms) 

### Variables

	   
* **`agreeableness`** (float): an agreeableness value for the personality   
* **`belief_base`** (list): the belief base of the agent   
* **`charisma`** (float): a charisma value. By default, it is computed with personality   
* **`conscientiousness`** (float): a conscientiousness value for the personality   
* **`current_norm`** (any type): the current norm of the agent   
* **`current_plan`** (any type): thecurrent plan of the agent   
* **`desire_base`** (list): the desire base of the agent   
* **`emotion_base`** (list): the emotion base of the agent   
* **`extroversion`** (float): an extraversion value for the personality   
* **`ideal_base`** (list): the ideal base of the agent   
* **`intention_base`** (list): the intention base of the agent   
* **`intention_persistence`** (float): intention persistence   
* **`law_base`** (list): the law base of the agent   
* **`neurotism`** (float): a neurotism value for the personality   
* **`norm_base`** (list): the norm base of the agent   
* **`obedience`** (float): an obedience value. By default, it is computed with personality   
* **`obligation_base`** (list): the obligation base of the agent   
* **`openness`** (float): an openness value for the personality   
* **`plan_base`** (list): the plan base of the agent   
* **`plan_persistence`** (float): plan persistence   
* **`probabilistic_choice`** (boolean): indicates if the choice is deterministic or probabilistic   
* **`receptivity`** (float): a receptivity value. By default, it is computed with personality   
* **`sanction_base`** (list): the sanction base of the agent   
* **`social_link_base`** (list): the social link base of the agent   
* **`thinking`** (list): the list of the last thoughts of the agent   
* **`uncertainty_base`** (list): the uncertainty base of the agent   
* **`use_emotions_architecture`** (boolean): indicates if emotions are automaticaly computed   
* **`use_norms`** (boolean): indicates if the normative engine is used   
* **`use_persistence`** (boolean): indicates if the persistence coefficient is computed with personality (false) or with the value given by the modeler   
* **`use_personality`** (boolean): indicates if the personnality is used   
* **`use_social_architecture`** (boolean): indicates if social relations are automaticaly computed 
 	
### Actions 
	  
	 
#### **`add_belief`**

add the predicate in the belief base.

* returns: bool 			
* **`predicate`** (predicate): predicate to add as a belief 			
* **`strength`** (float): the stregth of the belief 			
* **`lifetime`** (int): the lifetime of the belief  
	 
#### **`add_belief_emotion`**

add the belief about an emotion in the belief base.

* returns: bool 			
* **`emotion`** (emotion): emotion to add as a belief 			
* **`strength`** (float): the stregth of the belief 			
* **`lifetime`** (int): the lifetime of the belief  
	 
#### **`add_belief_mental_state`**

add the predicate in the belief base.

* returns: bool 			
* **`mental_state`** (mental_state): predicate to add as a belief 			
* **`strength`** (float): the stregth of the belief 			
* **`lifetime`** (int): the lifetime of the belief  
	 
#### **`add_desire`**

adds the predicates is in the desire base.

* returns: bool 			
* **`predicate`** (predicate): predicate to add as a desire 			
* **`strength`** (float): the stregth of the belief 			
* **`lifetime`** (int): the lifetime of the belief 			
* **`todo`** (predicate): add the desire as a subintention of this parameter  
	 
#### **`add_desire_emotion`**

adds the emotion in the desire base.

* returns: bool 			
* **`emotion`** (emotion): emotion to add as a desire 			
* **`strength`** (float): the stregth of the desire 			
* **`lifetime`** (int): the lifetime of the desire 			
* **`todo`** (predicate): add the desire as a subintention of this parameter  
	 
#### **`add_desire_mental_state`**

adds the mental state is in the desire base.

* returns: bool 			
* **`mental_state`** (mental_state): mental_state to add as a desire 			
* **`strength`** (float): the stregth of the desire 			
* **`lifetime`** (int): the lifetime of the desire 			
* **`todo`** (predicate): add the desire as a subintention of this parameter  
	 
#### **`add_directly_belief`**

add the belief in the belief base.

* returns: bool 			
* **`belief`** (mental_state): belief to add in th belief base  
	 
#### **`add_directly_desire`**

add the desire in the desire base.

* returns: bool 			
* **`desire`** (mental_state): desire to add in th belief base  
	 
#### **`add_directly_ideal`**

add the ideal in the ideal base.

* returns: bool 			
* **`ideal`** (mental_state): ideal to add in the ideal base  
	 
#### **`add_directly_uncertainty`**

add the uncertainty in the uncertainty base.

* returns: bool 			
* **`uncertainty`** (mental_state): uncertainty to add in the uncertainty base  
	 
#### **`add_emotion`**

add the emotion to the emotion base.

* returns: bool 			
* **`emotion`** (emotion): emotion to add to the base  
	 
#### **`add_ideal`**

add a predicate in the ideal base.

* returns: bool 			
* **`predicate`** (predicate): predicate to add as an ideal 			
* **`praiseworthiness`** (float): the praiseworthiness value of the ideal 			
* **`lifetime`** (int): the lifetime of the ideal  
	 
#### **`add_ideal_emotion`**

add a predicate in the ideal base.

* returns: bool 			
* **`emotion`** (emotion): emotion to add as an ideal 			
* **`praiseworthiness`** (float): the praiseworthiness value of the ideal 			
* **`lifetime`** (int): the lifetime of the ideal  
	 
#### **`add_ideal_mental_state`**

add a predicate in the ideal base.

* returns: bool 			
* **`mental_state`** (mental_state): mental state to add as an ideal 			
* **`praiseworthiness`** (float): the praiseworthiness value of the ideal 			
* **`lifetime`** (int): the lifetime of the ideal  
	 
#### **`add_intention`**

check if the predicates is in the desire base.

* returns: bool 			
* **`predicate`** (predicate): predicate to check 			
* **`strength`** (float): the stregth of the belief 			
* **`lifetime`** (int): the lifetime of the belief  
	 
#### **`add_intention_emotion`**

check if the predicates is in the desire base.

* returns: bool 			
* **`emotion`** (emotion): emotion to add as an intention 			
* **`strength`** (float): the stregth of the belief 			
* **`lifetime`** (int): the lifetime of the belief  
	 
#### **`add_intention_mental_state`**

check if the predicates is in the desire base.

* returns: bool 			
* **`mental_state`** (mental_state): predicate to add as an intention 			
* **`strength`** (float): the stregth of the belief 			
* **`lifetime`** (int): the lifetime of the belief  
	 
#### **`add_obligation`**

add a predicate in the ideal base.

* returns: bool 			
* **`predicate`** (predicate): predicate to add as an obligation 			
* **`strength`** (float): the strength value of the obligation 			
* **`lifetime`** (int): the lifetime of the obligation  
	 
#### **`add_social_link`**

add the social link to the social link base.

* returns: bool 			
* **`social_link`** (social_link): social link to add to the base  
	 
#### **`add_subintention`**

adds the predicates is in the desire base.

* returns: bool 			
* **`predicate`** (mental_state): the intention that receives the sub_intention 			
* **`subintentions`** (predicate): the predicate to add as a subintention to the intention 			
* **`add_as_desire`** (boolean): add the subintention as a desire as well (by default, false)  
	 
#### **`add_uncertainty`**

add a predicate in the uncertainty base.

* returns: bool 			
* **`predicate`** (predicate): predicate to add 			
* **`strength`** (float): the stregth of the belief 			
* **`lifetime`** (int): the lifetime of the belief  
	 
#### **`add_uncertainty_emotion`**

add a predicate in the uncertainty base.

* returns: bool 			
* **`emotion`** (emotion): emotion to add as an uncertainty 			
* **`strength`** (float): the stregth of the belief 			
* **`lifetime`** (int): the lifetime of the belief  
	 
#### **`add_uncertainty_mental_state`**

add a predicate in the uncertainty base.

* returns: bool 			
* **`mental_state`** (mental_state): mental state to add as an uncertainty 			
* **`strength`** (float): the stregth of the belief 			
* **`lifetime`** (int): the lifetime of the belief  
	 
#### **`change_dominance`**

changes the dominance value of the social relation with the agent specified.

* returns: bool 			
* **`agent`** (agent): an agent with who I get a social link 			
* **`dominance`** (float): a value to change the dominance value  
	 
#### **`change_familiarity`**

changes the familiarity value of the social relation with the agent specified.

* returns: bool 			
* **`agent`** (agent): an agent with who I get a social link 			
* **`familiarity`** (float): a value to change the familiarity value  
	 
#### **`change_liking`**

changes the liking value of the social relation with the agent specified.

* returns: bool 			
* **`agent`** (agent): an agent with who I get a social link 			
* **`liking`** (float): a value to change the liking value  
	 
#### **`change_solidarity`**

changes the solidarity value of the social relation with the agent specified.

* returns: bool 			
* **`agent`** (agent): an agent with who I get a social link 			
* **`solidarity`** (float): a value to change the solidarity value  
	 
#### **`change_trust`**

changes the trust value of the social relation with the agent specified.

* returns: bool 			
* **`agent`** (agent): an agent with who I get a social link 			
* **`trust`** (float): a value to change the trust value  
	 
#### **`clear_beliefs`**

clear the belief base

* returns: bool  
	 
#### **`clear_desires`**

clear the desire base

* returns: bool  
	 
#### **`clear_emotions`**

clear the emotion base

* returns: bool  
	 
#### **`clear_ideals`**

clear the ideal base

* returns: bool  
	 
#### **`clear_intentions`**

clear the intention base

* returns: bool  
	 
#### **`clear_obligations`**

clear the obligation base

* returns: bool  
	 
#### **`clear_social_links`**

clear the intention base

* returns: bool  
	 
#### **`clear_uncertainties`**

clear the uncertainty base

* returns: bool  
	 
#### **`current_intention_on_hold`**

puts the current intention on hold until the specified condition is reached or all subintentions are reached (not in desire base anymore).

* returns: bool 			
* **`until`** (any type): the current intention is put on hold (fited plan are not considered) until specific condition is reached. Can be an expression (which will be tested), a list (of subintentions), or nil (by default the condition will be the current list of subintentions of the intention)  
	 
#### **`get_belief`**

return the belief about the predicate in the belief base (if several, returns the first one).

* returns: mental_state 			
* **`predicate`** (predicate): predicate to get  
	 
#### **`get_belief_emotion`**

return the belief about the emotion in the belief base (if several, returns the first one).

* returns: mental_state 			
* **`emotion`** (emotion): emotion about which the belief to get is  
	 
#### **`get_belief_mental_state`**

return the belief about the mental state in the belief base (if several, returns the first one).

* returns: mental_state 			
* **`mental_state`** (mental_state): mental state to get  
	 
#### **`get_belief_with_name`**

get the predicates is in the belief base (if several, returns the first one).

* returns: mental_state 			
* **`name`** (string): name of the predicate to check  
	 
#### **`get_beliefs`**

get the list of predicates in the belief base

* returns: list&lt;mental_state> 			
* **`predicate`** (predicate): predicate to check  
	 
#### **`get_beliefs_metal_state`**

get the list of bliefs in the belief base containing the mental state

* returns: list&lt;mental_state> 			
* **`mental_state`** (mental_state): mental state to check  
	 
#### **`get_beliefs_with_name`**

get the list of predicates is in the belief base with the given name.

* returns: list&lt;mental_state> 			
* **`name`** (string): name of the predicates to check  
	 
#### **`get_current_intention`**

returns the current intention (last entry of intention base).

* returns: mental_state  
	 
#### **`get_current_plan`**

get the current plan.

* returns: BDIPlan  
	 
#### **`get_desire`**

get the predicates is in the desire base (if several, returns the first one).

* returns: mental_state 			
* **`predicate`** (predicate): predicate to check  
	 
#### **`get_desire_mental_state`**

get the mental state is in the desire base (if several, returns the first one).

* returns: mental_state 			
* **`mental_state`** (mental_state): mental state to check  
	 
#### **`get_desire_with_name`**

get the predicates is in the belief base (if several, returns the first one).

* returns: mental_state 			
* **`name`** (string): name of the predicate to check  
	 
#### **`get_desires`**

get the list of predicates is in the desire base

* returns: list&lt;mental_state> 			
* **`predicate`** (predicate): name of the predicates to check  
	 
#### **`get_desires_mental_state`**

get the list of mental states is in the desire base

* returns: list&lt;mental_state> 			
* **`mental_state`** (mental_state): name of the mental states to check  
	 
#### **`get_desires_with_name`**

get the list of predicates is in the belief base with the given name.

* returns: list&lt;mental_state> 			
* **`name`** (string): name of the predicates to check  
	 
#### **`get_emotion`**

get the emotion in the emotion base (if several, returns the first one).

* returns: emotion 			
* **`emotion`** (emotion): emotion to get  
	 
#### **`get_emotion_with_name`**

get the emotion is in the emotion base (if several, returns the first one).

* returns: emotion 			
* **`name`** (string): name of the emotion to check  
	 
#### **`get_ideal`**

get the ideal about the predicate in the ideal base (if several, returns the first one).

* returns: mental_state 			
* **`predicate`** (predicate): predicate to check ad an ideal  
	 
#### **`get_ideal_mental_state`**

get the mental state in the ideal base (if several, returns the first one).

* returns: mental_state 			
* **`mental_state`** (mental_state): mental state to return  
	 
#### **`get_intention`**

get the predicates in the intention base (if several, returns the first one).

* returns: mental_state 			
* **`predicate`** (predicate): predicate to check  
	 
#### **`get_intention_mental_state`**

get the mental state is in the intention base (if several, returns the first one).

* returns: mental_state 			
* **`mental_state`** (mental_state): mental state to check  
	 
#### **`get_intention_with_name`**

get the predicates is in the belief base (if several, returns the first one).

* returns: mental_state 			
* **`name`** (string): name of the predicate to check  
	 
#### **`get_intentions`**

get the list of predicates is in the intention base

* returns: list&lt;mental_state> 			
* **`predicate`** (predicate): name of the predicates to check  
	 
#### **`get_intentions_mental_state`**

get the list of mental state is in the intention base

* returns: list&lt;mental_state> 			
* **`mental_state`** (mental_state): mental state to check  
	 
#### **`get_intentions_with_name`**

get the list of predicates is in the belief base with the given name.

* returns: list&lt;mental_state> 			
* **`name`** (string): name of the predicates to check  
	 
#### **`get_obligation`**

get the predicates in the obligation base (if several, returns the first one).

* returns: mental_state 			
* **`predicate`** (predicate): predicate to return  
	 
#### **`get_plan`**

get the first plan with the given name

* returns: BDIPlan 			
* **`name`** (string): the name of the planto get  
	 
#### **`get_plans`**

get the list of plans.

* returns: list&lt;BDIPlan>  
	 
#### **`get_social_link`**

get the social link (if several, returns the first one).

* returns: social_link 			
* **`social_link`** (social_link): social link to check  
	 
#### **`get_social_link_with_agent`**

get the social link with the agent concerned (if several, returns the first one).

* returns: social_link 			
* **`agent`** (agent): an agent with who I get a social link  
	 
#### **`get_uncertainty`**

get the predicates is in the uncertainty base (if several, returns the first one).

* returns: mental_state 			
* **`predicate`** (predicate): predicate to return  
	 
#### **`get_uncertainty_mental_state`**

get the mental state is in the uncertainty base (if several, returns the first one).

* returns: mental_state 			
* **`mental_state`** (mental_state): mental state to return  
	 
#### **`has_belief`**

check if the predicates is in the belief base.

* returns: bool 			
* **`predicate`** (predicate): predicate to check  
	 
#### **`has_belief_mental_state`**

check if the mental state is in the belief base.

* returns: bool 			
* **`mental_state`** (mental_state): mental state to check  
	 
#### **`has_belief_with_name`**

check if the predicate is in the belief base.

* returns: bool 			
* **`name`** (string): name of the predicate to check  
	 
#### **`has_desire`**

check if the predicates is in the desire base.

* returns: bool 			
* **`predicate`** (predicate): predicate to check  
	 
#### **`has_desire_mental_state`**

check if the mental state is in the desire base.

* returns: bool 			
* **`mental_state`** (mental_state): mental state to check  
	 
#### **`has_desire_with_name`**

check if the prediate is in the desire base.

* returns: bool 			
* **`name`** (string): name of the predicate to check  
	 
#### **`has_emotion`**

check if the emotion is in the belief base.

* returns: bool 			
* **`emotion`** (emotion): emotion to check  
	 
#### **`has_emotion_with_name`**

check if the emotion is in the emotion base.

* returns: bool 			
* **`name`** (string): name of the emotion to check  
	 
#### **`has_ideal`**

check if the predicates is in the ideal base.

* returns: bool 			
* **`predicate`** (predicate): predicate to check  
	 
#### **`has_ideal_mental_state`**

check if the mental state is in the ideal base.

* returns: bool 			
* **`mental_state`** (mental_state): mental state to check  
	 
#### **`has_ideal_with_name`**

check if the predicate is in the ideal base.

* returns: bool 			
* **`name`** (string): name of the predicate to check  
	 
#### **`has_obligation`**

check if the predicates is in the obligation base.

* returns: bool 			
* **`predicate`** (predicate): predicate to check  
	 
#### **`has_social_link`**

check if the social link base.

* returns: bool 			
* **`social_link`** (social_link): social link to check  
	 
#### **`has_social_link_with_agent`**

check if the social link base.

* returns: bool 			
* **`agent`** (agent): an agent with who I want to check if I have a social link  
	 
#### **`has_uncertainty`**

check if the predicates is in the uncertainty base.

* returns: bool 			
* **`predicate`** (predicate): predicate to check  
	 
#### **`has_uncertainty_mental_state`**

check if the mental state is in the uncertainty base.

* returns: bool 			
* **`mental_state`** (mental_state): mental state to check  
	 
#### **`has_uncertainty_with_name`**

check if the predicate is in the uncertainty base.

* returns: bool 			
* **`name`** (string): name of the uncertainty to check  
	 
#### **`is_current_intention`**

check if the predicates is the current intention (last entry of intention base).

* returns: bool 			
* **`predicate`** (predicate): predicate to check  
	 
#### **`is_current_intention_mental_state`**

check if the mental state is the current intention (last entry of intention base).

* returns: bool 			
* **`mental_state`** (mental_state): mental state to check  
	 
#### **`is_current_plan`**

tell if the current plan has the same name as tested

* returns: bool 			
* **`name`** (string): the name of the plan to test  
	 
#### **`remove_all_beliefs`**

removes the predicates from the belief base.

* returns: bool 			
* **`predicate`** (predicate): predicate to remove  
	 
#### **`remove_belief`**

removes the predicate from the belief base.

* returns: bool 			
* **`predicate`** (predicate): predicate to remove  
	 
#### **`remove_belief_mental_state`**

removes the mental state from the belief base.

* returns: bool 			
* **`mental_state`** (mental_state): mental state to remove  
	 
#### **`remove_desire`**

removes the predicates from the desire base.

* returns: bool 			
* **`predicate`** (predicate): predicate to remove from desire base  
	 
#### **`remove_desire_mental_state`**

removes the mental state from the desire base.

* returns: bool 			
* **`mental_state`** (mental_state): mental state to remove from desire base  
	 
#### **`remove_emotion`**

removes the emotion from the emotion base.

* returns: bool 			
* **`emotion`** (emotion): emotion to remove  
	 
#### **`remove_ideal`**

removes the predicates from the ideal base.

* returns: bool 			
* **`predicate`** (predicate): predicate to remove  
	 
#### **`remove_ideal_mental_state`**

removes the mental state from the ideal base.

* returns: bool 			
* **`mental_state`** (mental_state): metal state to remove  
	 
#### **`remove_intention`**

removes the predicates from the intention base.

* returns: bool 			
* **`predicate`** (predicate): intention's predicate to remove 			
* **`desire_also`** (boolean): removes also desire  
	 
#### **`remove_intention_mental_state`**

removes the mental state from the intention base.

* returns: bool 			
* **`mental_state`** (mental_state): intention's mental state to remove 			
* **`desire_also`** (boolean): removes also desire  
	 
#### **`remove_obligation`**

removes the predicates from the obligation base.

* returns: bool 			
* **`predicate`** (predicate): predicate to remove  
	 
#### **`remove_social_link`**

removes the social link from the social relation base.

* returns: bool 			
* **`social_link`** (social_link): social link to remove  
	 
#### **`remove_social_link_with_agent`**

removes the social link from the social relation base.

* returns: bool 			
* **`agent`** (agent): an agent with who I get the social link to remove  
	 
#### **`remove_uncertainty`**

removes the predicates from the uncertainty base.

* returns: bool 			
* **`predicate`** (predicate): predicate to remove  
	 
#### **`remove_uncertainty_mental_state`**

removes the mental state from the uncertainty base.

* returns: bool 			
* **`mental_state`** (mental_state): mental state to remove  
	 
#### **`replace_belief`**

replace the old predicate by the new one.

* returns: bool 			
* **`old_predicate`** (predicate): predicate to remove 			
* **`predicate`** (predicate): predicate to add

----




## sorted_tasks
A control architecture, based on the concept of tasks, which are executed in an order defined by their weight. This skill extends the WeightedTasksArchitecture skill and take all his actions and variables 

### Variables

	 
 	
### Actions 
	

----




## user_first
A control architecture, based on FSM, where the user is being given control before states / reflexes of the agent are executed. This skill extends the UserControlArchitecture skill and take all his actions and variables 

### Variables

	 
 	
### Actions 
	

----




## user_last
A control architecture, based on FSM, where the user is being given control after states / reflexes of the agent are executed. This skill extends the UserControlArchitecture skill and take all his actions and variables 

### Variables

	 
 	
### Actions 
	

----




## user_only
A control architecture, based on FSM, where the user is being given complete control of the agents. This skill extends the UserControlArchitecture skill and take all his actions and variables 

### Variables

	 
 	
### Actions 
	

----




## weighted_tasks
The class WeightedTasksArchitecture. A simple architecture of competing tasks, where one can be active at a time. Weights of the tasks are computed every step and the chosen task is simply the one with the maximal weight 

### Variables

	 
 	
### Actions 
	
